--- a/style.css
+++ b/style.css
@@ -1,75 +1,319 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
 }
 
 body {
-    margin: 0 auto ;
-    font-family: "VAG Rounded";
+  margin: 0 auto;
+  /* font-family: "VAG Rounded"; */
+  font-family: "VAG Rounded", "Inter", sans-serif;
+  margin-left: auto;
+  margin-right: auto;
+}
 
+button,
+input {
+  border: none;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 nav {
-    padding: 8px 16px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  padding: 8px 20rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav a {
+  color: black;
+}
+
+nav a:hover {
+  color: rgb(227, 23, 54);
 }
 
 nav ul {
-    display: flex;
-    gap: 50px;
+  display: flex;
+  gap: 50px;
 }
 
 nav ul li {
-    font-size: 19px;
+  font-size: 16px;
 }
 
 nav button {
-    background-color: #E31837;
-    color: white;
-    border-radius: 25px;
-    width: 200px;
-    height: 50px;
-    font-weight: 900;
+  background-color: #e31837;
+  color: white;
+  border-radius: 25px;
+  width: 200px;
+  height: 50px;
+  font-weight: 900;
 }
 
 .header--button {
-    background-color: #EFBB40;
-    color: white;
-    border-radius: 25px;
-    width: 200px;
-    height: 50px; 
-    font-weight: 900;
+  background-color: #efbb40;
+  color: white;
+  border-radius: 25px;
+  width: 200px;
+  height: 50px;
+  font-weight: 900;
 }
 .header {
-    background-color: rgb(227, 23, 54);
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    column-gap: 50px;
-    height: 85svh;
+  background-color: rgb(227, 23, 54);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 50px;
+  height: 85svh;
 }
 
 .header--left {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .header--left h1 {
-    font-size: 45px;
+  font-size: 45px;
 }
 
 .header--left p {
-    font-size: 19px;
-    line-height: 1.5;
+  font-size: 19px;
+  line-height: 1.5;
 }
 
+#menu {
+  background-color: black;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 5rem 20rem;
+}
+
+#menu h1 {
+  font-size: 30px;
+  padding: 32px 0;
+}
+
+#menu ul {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  border: 1px solid darkgray; /* Add border to the ul */
+}
+
+#menu ul li {
+  /* border: 10px;
+    border-width: 10px;
+    border-color: purple; */
+  width: 100%;
+  text-align: center;
+  background-color: black;
+  padding: 10px;
+}
+
+#menu ul li:hover {
+  background-color: red;
+}
+
+#menu ul li a {
+  color: white;
+  font-size: 35px;
+}
+
+#solo,
+#family,
+#budget {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  font-size: 30px;
+  background: white;
+  color: black;
+  /* padding: 20px; */
+}
+
+#solo h1,
+#family h1,
+#budget h1 {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  font-size: 35px;
+  padding: 20px;
+}
+
+#solo .solo-title,
+#family .family-title,
+#budget .budget-title {
+  width: 100%;
+  display: flex;
+  padding: 50px 0;
+  justify-content: center;
+  background-color: black;
+  font-size: 25px;
+  color: white;
+}
+
+#solo h1 b,
+#family h1 b,
+#budget h1 b {
+  font-weight: bold;
+}
+
+#solo h1 span,
+#family h1 span,
+#budget h1 span {
+  background-color: black;
+  padding: 0 10px;
+  color: white;
+}
+
+#solo p,
+#family p,
+#budget p {
+  width: 100%;
+  display: flex;
+  padding: 20px;
+}
+
+#solo hr,
+#family hr,
+#budget hr {
+  margin: 20px 0;
+}
+
+#about {
+  background-color: #efbb40;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* column-gap: 50px; */
+  /* height: 85svh; */
+  padding: 5rem 20rem;
+}
+
+#about .about-title {
+  font-size: 30px;
+  justify-self: center;
+  align-self: center;
+}
+
+#about p {
+  font-size: 19px;
+  text-align: justify;
+}
+
+#about h1 b {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+#about .chef-info {
+  /* padding: 10px; */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#about div p strong {
+  font-weight: bold;
+}
+
+#about h1 {
+  margin-bottom: 30px;
+}
+
+#about div {
+  display: flex;
+  column-gap: 220px;
+}
+
+#about div div {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+}
+
+#contact {
+  background-color: rgb(227, 23, 54);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* column-gap: 50px; */
+  /* height: 85svh; */
+  padding: 5rem 20rem;
+}
+
+#contact .contact-title {
+  font-size: 35px;
+  justify-self: center;
+  align-self: center;
+}
+
+#contact p {
+  font-size: 20px;
+  text-align: justify;
+}
+
+#contact .book {
+  /* font-size: 35px; */
+}
+
+#contact p b {
+  font-weight: bold;
+}
+
+form {
+  /* row-gap: 50px; */
+  width: 100%;
+  gap: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+form p input {
+  width: 100%;
+  font-size: 20px;
+  padding: 10px 20px;
+  /* margin-top: 10px; */
+  border-radius: 25px;
+}
+
+form p button {
+  background-color: #efbb40;
+  color: white;
+  justify-self: end;
+  place-self: end;
+  align-self: self-end;
+  /* width: 100%; */
+  font-size: 18px;
+  padding: 10px 20px;
+  border-radius: 25px;
+
+  /* text-align: center; */
+  /* margin-top: 20px; */
+}
+
+footer {
+  background: gray;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  font-size: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
